--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
         <input type="range" name="range" id="progressbar" min="0" value="0" max="100">
         <div class="icons">
             <!--fontawesome icons-->
+            <h1>This is amarnath to learn git commit</h1>
+
             <i class="fa-solid fa-backward-step fa-2x"></i>
             <i class="fa-solid fa-play-circle fa-2x" id="masterplay"></i>
             <i class="fa-solid fa-forward-step fa-2x"></i>
