some error has modified

--- a/index.html
+++ b/index.html
@@ -20,44 +20,44 @@
         <div class="Songlist"><h1>Welcome to the Music Player</h1>
         <div class="SongitemContainer">
             <div class="Songitem">
-            <img src="s1.jpg" alt="1" >
+            <img src="covers/s1.jpg" alt="1" >
             <span class="songName">lo-maan-liya</span>
-            <span class="songplay"><span class="time">5:20<i class="far songItemPlay fa-play-circle"></i></span></span>  
+            <span class="songplay"><span class="time">5:20<i id="0" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
-                <img src="s2.jpg" alt="1" >
+                <img src="covers/s2.jpg" alt="1" >
                 <span class="songName">Maan meri jaan</span>
-                <span class="songplay"><span class="time">5:20<i class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time">5:20<i id="1" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
-                <img src="s3.jpg" alt="1" >
+                <img src="covers/s3.jpg" alt="1" >
                 <span class="songName">Pyaar krte ho na</span>
-                <span class="songplay"><span class="time">5:20<i class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time">5:20<i id="2" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
-                <img src="s4.jpg" alt="1" >
+                <img src="covers/s4.jpg" alt="1" >
                 <span class="songName">Baarish main tum</span>
-                <span class="songplay"><span class="time">5:20<i class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time">5:20<i id="3" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
-                <img src="s5.jpg" alt="1" >
+                <img src="covers/s5.jpg" alt="1" >
                 <span class="songName">Kesariya</span>
-                <span class="songplay"><span class="time">5:20<i class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time">5:20<i id="4" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
-                <img src="s6.jpg" alt="1" >
+                <img src="covers/s6.jpg" alt="1" >
                 <span class="songName">Dil de diya hai</span>
-                <span class="songplay"><span class="time">5:20<i class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time">5:20<i id="5" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
-                <img src="s7.jpg" alt="1" >
+                <img src="covers/s7.jpg" alt="1" >
                 <span class="songName">Dil galti kar</span>
-                <span class="songplay"><span class="time">5:20<i class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time">5:20<i id="6" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
-                <img src="s8.jpg" alt="1" >
+                <img src="covers/s8.jpg" alt="1" >
                 <span class="songName">Manike</span>
-                <span class="songplay"><span class="time">5:20<i class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time">5:20<i id="7" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
         </div>
     </div>
@@ -70,7 +70,7 @@
         <input type="range" name="range" id="progressbar" min="0" value="0" max="100">
         <div class="icons">
             <!--fontawesome icons-->
-            <h1>This is amarnath to learn git commit</h1>
+
 
             <i class="fa-solid fa-backward-step fa-2x"></i>
             <i class="fa-solid fa-play-circle fa-2x" id="masterplay"></i>
