change in script.js

--- a/index.html
+++ b/index.html
@@ -22,42 +22,42 @@
             <div class="Songitem">
             <img src="covers/s1.jpg" alt="1" >
             <span class="songName">lo-maan-liya</span>
-            <span class="songplay"><span class="time">5:20<i id="0" class="far songItemPlay fa-play-circle"></i></span></span>  
+            <span class="songplay"><span class="time"><i id="0" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
                 <img src="covers/s2.jpg" alt="1" >
                 <span class="songName">Maan meri jaan</span>
-                <span class="songplay"><span class="time">5:20<i id="1" class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time"><i id="1" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
                 <img src="covers/s3.jpg" alt="1" >
                 <span class="songName">Pyaar krte ho na</span>
-                <span class="songplay"><span class="time">5:20<i id="2" class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time"><i id="2" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
                 <img src="covers/s4.jpg" alt="1" >
                 <span class="songName">Baarish main tum</span>
-                <span class="songplay"><span class="time">5:20<i id="3" class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time"><i id="3" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
                 <img src="covers/s5.jpg" alt="1" >
                 <span class="songName">Kesariya</span>
-                <span class="songplay"><span class="time">5:20<i id="4" class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time"><i id="4" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
                 <img src="covers/s6.jpg" alt="1" >
                 <span class="songName">Dil de diya hai</span>
-                <span class="songplay"><span class="time">5:20<i id="5" class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time"><i id="5" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
                 <img src="covers/s7.jpg" alt="1" >
                 <span class="songName">Dil galti kar</span>
-                <span class="songplay"><span class="time">5:20<i id="6" class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time"><i id="6" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
             <div class="Songitem">
                 <img src="covers/s8.jpg" alt="1" >
                 <span class="songName">Manike</span>
-                <span class="songplay"><span class="time">5:20<i id="7" class="far songItemPlay fa-play-circle"></i></span></span>  
+                <span class="songplay"><span class="time"><i id="7" class="far songItemPlay fa-play-circle"></i></span></span>  
             </div>
         </div>
     </div>
@@ -72,12 +72,12 @@
             <!--fontawesome icons-->
 
 
-            <i class="fa-solid fa-backward-step fa-2x"></i>
+            <i class="fa-solid fa-backward-step fa-2x" id="previous"></i>
             <i class="fa-solid fa-play-circle fa-2x" id="masterplay"></i>
-            <i class="fa-solid fa-forward-step fa-2x"></i>
+            <i class="fa-solid fa-forward-step fa-2x" id="next"></i>
         </div>  
         <div class="songinfo">
-           <img src="music.gif.gif" width="50px"  alt="" id="gif">Welcome to the Music Player
+           <img src="music.gif.gif" width="50px" height="15px"   alt="" id="gif"><span id="masterSongName"></span>
         </div>
     </div>
     <script src="script.js"></script> 
